--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "goit-react-hw-07-phonebook",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -14,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -21,7 +24,7 @@
     "web-vitals": "^0.2.4",
     "yup": "^0.32.1"
   },
-  "homepage": "https://zijking.github.io/goit-react-hw-07-phonebook",
+  "homepage": "https://zijking.github.io/goit-react-hw-08-phonebook",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
